# midiparser-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  thing.thing
src/: components.cpp  components.h  events.cpp  events.h  midiparser.h  operator_overrides.cpp  operator_overrides.h  parser.cpp  parser.h  parsing.cpp  parsing.h
